<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAllRecordsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all_records"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="newRecordOnClick"
        android:text="@string/new_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllRecordsLabel" />

    <Button
        android:id="@+id/btnMock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mockOnClick"
        android:text="@string/mock"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnNewRecord"
        app:layout_constraintEnd_toStartOf="@+id/btnNewRecord"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scrollToTopOnClick"
        android:text="@string/begin"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnNewRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNewRecord" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clearOnClick"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/btnNewRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMock" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="scrollToBottomOnClick"
        android:text="@string/end"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNewRecord" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

</androidx.constraintlayout.widget.ConstraintLayout>